--- a/admin/module/menu/template/default/side.css
+++ b/admin/module/menu/template/default/side.css
@@ -11,12 +11,12 @@
   width:100%;
 }
 
-.menu_index_active {
+.menu_side_active {
   color:white;
 	background-color:#4e6b31;
 }
 
-.menu_index_inactive {
+.menu_side_inactive {
   color:grey;
   font-style:normal;
 	background-color:#dcdc78
