Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/template/default/default.css
+++ b/session/template/default/default.css
@@ -159,6 +159,11 @@ input {
   text-align:right;
 }
 
+#oliv_admin {
+  text-align:right;
+  height:0px;
+}
+
 #oliv_login {
   text-align:right;
   width:900px;
