Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/module/admin/template/default/default.css
+++ b/session/module/admin/template/default/default.css
@@ -2,7 +2,7 @@
 	height:25px;
 	float:right;
 	padding:1px;
-	background-color:lightblue;
+	background-color:#ffd0d0;
 }
 
 #admin_action,admin_content_edit,admin_template_edit {
