--- a/session/module/menu/template/default/side.css
+++ b/session/module/menu/template/default/side.css
@@ -11,6 +11,15 @@
   width:100%;
 }
 
+#menu_edit_frame {
+	margin-top:.3em;
+	margin-bottom:.3em;
+	border:1px solid;
+	color:red;
+	width:100%;
+	background-color:#ffd0d0;
+}
+
 .menu_side_active {
   color:white;
 	background-color:#4e6b31;
