--- a/session/template/default/default.css
+++ b/session/template/default/default.css
@@ -280,3 +280,21 @@ input {
   color:red;
   font-weight:bold;
 }
+
+#oliv_context_menu {
+	position:absolute;
+	top:250;
+	left:0;
+	z-index:999'
+}
+
+#oliv_context_table {
+	border-style:outset;
+	border-width:1;
+	background-color:red;
+}
+
+#oliv_context_item {
+	font-family:sans-serif;
+	font-size:10pt;	
+}
