--- a/session/template/default/default.css
+++ b/session/template/default/default.css
@@ -283,14 +283,14 @@ input {
 
 #oliv_context_menu {
 	position:absolute;
-	top:250;
-	left:0;
-	z-index:999'
+	top:250px;
+	left:0px;
+	z-index:999;
 }
 
 #oliv_context_table {
 	border-style:outset;
-	border-width:1;
+	border-width:1px;
 	background-color:red;
 }
 
