Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/template/default/default.css
+++ b/session/template/default/default.css
@@ -127,6 +127,9 @@ input {
 	font-size:50%;
 }
 
+.oliv_edit_cursor {
+	cursor: text;
+}
 
 /*----------------------------------------------------------------------------*/
 /* id definition */
