Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/template/default/default.css
+++ b/session/template/default/default.css
@@ -131,6 +131,11 @@ input {
 	cursor: text;
 }
 
+.daba-field {
+	font-style:italic;
+	background-color:lightyellow;
+}
+
 /*----------------------------------------------------------------------------*/
 /* id definition */
 #oliv_site {
