--- a/iggmp/session/template/default/default.css
+++ b/iggmp/session/template/default/default.css
@@ -81,7 +81,7 @@ input {
 
 li {
 	font-style:italic;
-	font-size:0.9em;
+	font-family:serif;
 }
 
 /*----------------------------------------------------------------------------*/
@@ -154,14 +154,14 @@ li {
 #oliv_header {
   margin:0 auto;
   width:900px;
-  height:80px;
+  height:45px;
   background-repeat:no-repeat;
   background-position:center bottom;
 }
 
 #oliv_title {
   padding-top:50px;
-  text-align:right;
+	float:left;
 }
 
 #oliv_login {
@@ -205,7 +205,8 @@ li {
 }
 
 #oliv_left1,#oliv_left2,#oliv_left3 {
-  margin-top:5px;
+  margin-top:10px;
+  margin-bottom:10px;
 }
 
 #oliv_center{
@@ -219,14 +220,14 @@ li {
 }
 
 #oliv_footer {
-	font-size:0.8em;
-	color:white;
+	font-size:0.9em;
+	color:grey;
   float:left;
   margin:0 auto;
   width:900px;
   height:30px;
   text-align:center;
-  background-color:black;
+  background-color:lightgrey;
 }
 
 /*----------------------------------------------------------------------------*/
