--- a/iggmp/session/module/header/template/default/default.css
+++ b/iggmp/session/module/header/template/default/default.css
@@ -1,7 +1,8 @@
 #header_background {
   margin:0 auto;
   height:45px;
-	background-color:lightgrey;
+  border-bottom:solid 1px;
+  background-color:white;
 }
 
 #header_img {
@@ -14,9 +15,10 @@
 }
 
 #header_logo {
+  width:70px;
 	float:right;
-	margin-right:0.2em;
-	margin-top:0.2em;
+	margin-right:-0.3em;
+	margin-top:15px;
 }
 
 .header_title {
