--- a/iggmp/session/template/default/default.css
+++ b/iggmp/session/template/default/default.css
@@ -143,8 +143,11 @@ li {
 #oliv_page {
   z-index:0;
   margin:0 auto;
+  margin-top:1em;
   width:900px;
-  height:500px;
+  height:700px;
+  background-repeat:repeat-x;
+  background-position:center top;
 }
 
 #oliv_space {
@@ -153,7 +156,7 @@ li {
 
 #oliv_header {
   margin:0 auto;
-  width:900px;
+  width:100%;
   height:45px;
   background-repeat:no-repeat;
   background-position:center bottom;
@@ -166,14 +169,14 @@ li {
 
 #oliv_login {
   text-align:right;
-  width:900px;
+  width:100%;
   height:0px;
 }
 
 #oliv_top {
   margin:0 auto;
   float:left;
-  width:900px;
+  width:100%;
   height:30px;
   background-repeat:no-repeat;
 }
@@ -188,12 +191,12 @@ li {
 #oliv_main {
   margin:0 auto;
   float:left;
-  width:1000px;
+  width:100%;
 }
 
 #oliv_left {
   float:left;
-  width:200px;
+  margin-left:2em;
 }
 
 #oliv_line {
@@ -211,8 +214,8 @@ li {
 
 #oliv_center{
   float:left;
-  width:700px;
-	margin-left:10px;
+  width:600px;
+	margin-left:1em;
 }
 
 #oliv_content {
@@ -224,7 +227,7 @@ li {
 	color:grey;
   float:left;
   margin:0 auto;
-  width:900px;
+  width:100%;
   height:30px;
   text-align:center;
   background-color:lightgrey;
