--- a/session/template/default/default.css
+++ b/session/template/default/default.css
@@ -137,6 +137,7 @@ div {
   margin:0;
   padding:0;
   width:100%;
+  min-height:1000px;
   background-repeat:repeat-x;
   background-position:center center;
 }
