--- a/session/template/default/template_edit.css
+++ b/session/template/default/template_edit.css
@@ -19,18 +19,13 @@ html, body {
 }
 
 #oliv_toolbox {
-	position:fixed;
-	right:0;
-
-	width:40px;
-	height:300px;
-	background-color:lightgreen;
-	
-	font-size:0.8em;
+	float:right;
+	height:100%;
 }
 
 #oliv_empty_message {
 	margin:auto;
+	margin-top:100px;
 	width:300px;
 	height:100px;
 	
