--- a/iggmp/session/module/toolbox/template/default/default.css
+++ b/iggmp/session/module/toolbox/template/default/default.css
@@ -23,14 +23,29 @@ body {
 }
 
 #tooltitle {
-	font-size:0.8em;
-	line-height:0.9em;
+	font-size:12px;
 	font-weight:bold;
-	background-color:lightgrey;
-	text-align:center;
+	color:grey;
+
+	width:15px;
+	height:12px;
+	top:-55px;
+	left:0px;
 }
 
 #toolbox_config {
 	background-color:lightgrey;
 	height:10px;
+}
+
+v {
+	writing-mode:tb-rl;
+	-webkit-transform:rotate(270deg);
+	-moz-transform:rotate(270deg);
+	-o-transform:rotate(270deg);
+
+	white-space:nowrap;
+	display:block;
+
+	position:absolute;
 }
