--- a/iggmp/session/template/default/default.css
+++ b/iggmp/session/template/default/default.css
@@ -151,10 +151,13 @@ li {
 	height:30px;
 }
 
+#fatal_error {
+	margin:0 auto;
+	border:2px solid red;
+	background-color:yellow;
+}
+
 #oliv_site {
-  position:relative;
-  top:0px;
-  left:0px;
   z-index:0;
   margin:0;
   padding:0;
@@ -169,9 +172,9 @@ li {
 }
 
 #oliv_toolbox {
-	position:relative;
+	position:absolute;
+	right:0px;
 	z-index:3;
-	float:right;
 	height:100%;
 }
 
