--- a/session/module/toolbox/template/default/default.css
+++ b/session/module/toolbox/template/default/default.css
@@ -5,14 +5,16 @@ body {
 #toolbox {
 	visibility:hidden;
 	position:relative;
+	z-index:999;
+	
 }
 
 #tools {
+	position:relative;
 	background-color:#f0f0f0;
 	width:36px;
 	padding:1px;
 	border:1px solid #d0d0d0;
-	z-index:999;
 }
 
 #toolbox_grip {
@@ -20,3 +22,30 @@ body {
 	right:14px;
 }
 
+#tooltitle {
+	font-size:12px;
+	font-weight:bold;
+	color:grey;
+
+	width:15px;
+	height:12px;
+	top:-55px;
+	left:0px;
+}
+
+#toolbox_config {
+	background-color:lightgrey;
+	height:10px;
+}
+
+v {
+	writing-mode:tb-rl;
+	-webkit-transform:rotate(270deg);
+	-moz-transform:rotate(270deg);
+	-o-transform:rotate(270deg);
+
+	white-space:nowrap;
+	display:block;
+
+	position:absolute;
+}
