Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/module/search/template/default/default.css
+++ b/session/module/search/template/default/default.css
@@ -2,3 +2,15 @@
 	padding:2px;
 }
 
+#search_result_box {
+	border:1px solid;
+	width:100%;
+	margin-bottom:2px;
+	background-color:lightyellow;
+	padding-left:2px;
+}
+
+.highlight {
+	font-weight:bold;
+	color:red;
+}
