Signed-off-by: Tom <tom@tom-Latitude-D630.(none)>

--- a/documentation/session/template/default/default.css
+++ b/documentation/session/template/default/default.css
@@ -105,9 +105,11 @@ div {
   font-size:75%;
 }
 
-.oliv_error {
-  color:red;
+#oliv_error {
+  color:white;
+  background-color:red;
   font-weight:bold;
+	font-family:courier;
 }
 .oliv_field_title {
   font-size:60%;
