--- a/documentation/session/page/templates/templates.xml
+++ b/documentation/session/page/templates/templates.xml
@@ -22,5 +22,7 @@
 
 	  <oliv_left1 mod='menu'>menu:main;template:side;</oliv_left1>
 	  <oliv_left2 mod='menu'>menu:templates;template:side;</oliv_left2>
+
+	  <oliv_content mod="article">content:templates</oliv_content>
 	</content>
 </page>
