--- a/documentation/session/module/breadcrumb/template/default/default.css
+++ b/documentation/session/module/breadcrumb/template/default/default.css
@@ -1,7 +1,16 @@
-#module_path_field {
+#module_breadcrumb_field {
 	padding:2px;
 	margin-top:0px;
 	font-size:80%;
 	border-bottom:1px solid;
 }
 
+.breadcrumb {
+	padding:2px;
+}
+
+.breadcrumb_active {
+	background-color:#4E6B31;
+	color:white;
+	padding:2px;
+}
