--- a/iggmp/session/template/default/default.css
+++ b/iggmp/session/template/default/default.css
@@ -178,19 +178,26 @@ li {
 	height:100%;
 }
 
+#oliv_table {
+	float:left;
+	width:100%;
+}
+
 #oliv_table_left {
 	vertical-align:top;
-	padding-top:18px;
+	width:200px;
+	padding:2px;
 }
 
 #oliv_table_middle {
 	vertical-align:top;
-	padding-top:18px;
+	width:100%;
+	padding:2px;
 }
 
 #oliv_table_right {
 	vertical-align:top;
-	padding-top:18px;
+	padding:2px;
 }
 
 #oliv_header {
@@ -208,12 +215,15 @@ li {
 	margin:0px;
 }
 
+#images {
+	float:right;
+	margin-left:5px;
+	margin-top:40px;
+}
+
 #oliv_top {
-  margin:0 auto;
-  float:left;
   width:100%;
-  height:30px;
-  background-repeat:no-repeat;
+  height:40px;
 }
 
 #oliv_search {
@@ -229,27 +239,6 @@ li {
   width:100%;
   background-repeat:no-repeat;
   background-position:center top;
-}
-
-#oliv_left {
-  float:left;
-  margin-left:2em;
-}
-
-#oliv_left1,#oliv_left2,#oliv_left3 {
-  margin-top:10px;
-  margin-bottom:10px;
-}
-
-#oliv_center{
-  float:left;
-  width:600px;
-	margin-left:1em;
-}
-
-#oliv_right {
-	float:right;
-	margin-left:1em;
 }
 
 #oliv_content {
